--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 			-->
 		<div class="header-wrapper" style="min-height: 100%;">
 			<div class="zoominheader" style="top: 65px; max-height: 85%;background: var(--secondary);">
-				<div class="row" style="align-content: center; height: 50%;">
+				<div class="row" style="align-content: center; height: 50%;display: inline;">
 					<div class="col-sm-12" ><img class="bannerlogo slideanim3" src="img/logo.png" /></div>
 				</div>
-				<div class="row" style="align-content: center; height: 25%;">				
+				<div class="row" style="align-content: center; height: 35%; display: inline;">				
 					<div class="col-sm-12" >
 						<div class="wiegehtdas fade"><h4><br>1.Shisha wählen</h4>
 							<img style="text-align:center;" src="img/wiegehtdas1.svg" />
@@ -1027,7 +1027,7 @@ data-close-text="Got it!">
 	  slideIndex++;
 	  if (slideIndex > slides.length) {slideIndex = 1}    
 	  
-	  slides[slideIndex-1].style.display = "block";  
+	  slides[slideIndex-1].style.display = "inline";  
 	  setTimeout(showSlides, 4500); // Change image every 2 seconds
 	}
 	</script>
