--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			-->
 		<div class="header-wrapper" style="min-height: 100%;">
 			<div class="zoominheader" style="top: 65px; max-height: 85%; height: 85%;background: var(--secondary);">
-				<div class="row" style="text-align: center;min-height: fit-content; min-width: 100%">
+				<div class="row" style="display:inline-block; text-align: center;min-height: fit-content; min-width: 100%">
 					<span style="vertical-align: middle;display: inline-block;"></span><img style="vertical-align: middle;" class="bannerlogo slideanim3" src="img/logo.png" />
 				</div>
 				<div class="row" style="vertical-align: middle; max-height: 35%;">				
