--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<div class="row" style="display:inline-block; text-align: center;min-height: fit-content; min-width: 100%">
 					<span style="vertical-align: middle;display: inline-block;"></span><img style="vertical-align: middle;" class="bannerlogo slideanim3" src="img/logo.png" />
 				</div>
-				<div class="row" style="vertical-align: middle; max-height: 35%;">				
+				<div class="row" style="display:inline-block;vertical-align: middle; max-height: 35%;">				
 					<div class="col-sm-12" style="vertical-align: middle; max-height: 100%;" >
 						<div class="wiegehtdas fade"><h4><br>1.Shisha wählen</h4>
 							<img class="wiegehtdasimg" src="img/wiegehtdas1.svg" />
