--- a/index.html
+++ b/index.html
@@ -141,11 +141,7 @@
 			-->
 		<div class="header-wrapper" style="min-height: 100%;">
 			<div class="zoominheader" style="top: 65px; max-height: 85%; height: 85%;background: var(--secondary);">
-				<div class="row" style="display:inline-block; text-align: center;min-height: fit-content; min-width: 100%">
-					<span style="vertical-align: middle;display: inline-block;"></span><img style="vertical-align: middle;" class="bannerlogo slideanim3" src="img/logo.png" />
-				</div>
-				<div class="row" style="display:inline-block;vertical-align: middle; max-height: 35%;">				
-					<div class="col-sm-12" style="vertical-align: middle; max-height: 100%;" >
+					<span style="vertical-align: middle;"></span><img style="vertical-align: middle; max-width: 100%; max-height: 50%;" class="bannerlogo slideanim3" src="img/logo.png" />
 						<div class="wiegehtdas fade"><h4><br>1.Shisha wählen</h4>
 							<img class="wiegehtdasimg" src="img/wiegehtdas1.svg" />
 							<div class="meter">
@@ -170,14 +166,11 @@
 								<span style="width:100%;"><span class="progress1"></span></span>
 							</div>
 						</div>
-					</div>
-				</div>
-				
 				
 			</div>
-			<section id="section10" class="demo" style="height: 15%; background: var(--third); z-index: 1;">
+			<div id="section10" class="demo" style="height: 15%; background: var(--third); z-index: 1;">
 				<a href="#auswahl_shisha" style="z-index: 3;"><span></span></a>
-			</section>
+			</div>
 		</div>
 <!--
 		<div id="wiegehtdas" class="container-fluid " style="background: linear-gradient(
@@ -476,7 +469,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 										<option value="1.50" data-img="img/fanta.svg" data-name="Fanta(0,33l)">Fanta 0.33l</option>
 										<option value="1.50" data-img="img/sprite.svg" data-name="Sprite(0,33l)">Sprite 0.33l</option>
 										<option value="1.50" data-img="img/gerolsteiner.svg" data-name="Gerolsteiner-Naturell(0,33l)">Gerolsteiner Naturell 0.33l</option>
-										<option value="1.50" data-img="img/gerolsteinersprudel.svg" data-name="Gerolsteiner-Sprudel(0,33l)">Gerolsteiner Naturell 0.33l</option>
+										<option value="1.50" data-img="img/gerolsteinersprudel.svg" data-name="Gerolsteiner-Sprudel(0,33l)">Gerolsteiner Sprudel 0.33l</option>
 										<option value="1.50" data-img="img/durstlöscher.svg" data-name="Durstloescher(0,33l)">Durstlöscher 0.5l</option>
 										<option value="2.00" data-img="img/redbull.svg" data-name="RedBull(0,25l)">RedBull 0.25l</option>
 										<option value="2.00" data-img="img/redbullzero.svg" data-name="RedBull-sugarfree(0,25l)">RedBull sugarfree 0.25l</option>
