--- a/index.html
+++ b/index.html
@@ -940,9 +940,9 @@ data-close-text="Got it!">
 			<div class="modal-dialog modal-full" style="height: 100%;padding: 10px;" role="document">
 				<div class="modal-content" style="text-align: center; width: 100%;padding-right: 0px; height: 100%;">
 					<div class="modal-header">
-						<h1 class="modal-title">Impressum</h1>
+						<h1>Impressum</h1>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<i class="material-icons">close</i>
+							<i class="material-icons" style="font-size: 30px; color: var(--grundfarbe);">cancel</i>
 						</button>
 					</div>
 					<div class="modal-body p-4" id="result" style="text-align: center; width: 100%;padding-right: 0px; height: 100%;">
@@ -971,26 +971,115 @@ data-close-text="Got it!">
 	<div class="modal" id="myModal2" tabindex="-1" role="dialog" aria-hidden="true" style="text-align: center; width: 100%; height: 100%; padding-right: 0px;">
 			<div class="modal-dialog modal-full"  style="height: 100%;padding: 10px;" role="document">
 				<div class="modal-content" style="text-align: center; width: 100%;padding-right: 0px; height: 100%;">
-					<div class="modal-header">
-						<h1 class="modal-title">AGB</h1>
+					<div class="modal-header" >
+						<h1 >AGB</h1>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<i class="material-icons">close</i>
+							<i class="material-icons" style="font-size: 30px; color: var(--grundfarbe);">cancel</i>
 						</button>
 					</div>
-					<div class="modal-body p-4" id="result" style="text-align: center; width: 100%;padding-right: 0px; height: 100%;">
-							<p style="color: white;">Hier kommt der Text rein</p>
+					<div class="modal-body p-4" id="result" style="text-align: left; width: 100%;padding-right: 0px; height: auto;">
+								<p ><b>Gebrauchsanweisung für die Benutzung der Shisha</b></p>
+								<p >1. Die Shisha ist stets sorgfältig zu behandeln und nach dieser Anweisung zu benutzen. In geschlossenen Räumlichkeiten sollte während der Benutzung ein Fenster geöffnet sein. </p>
+								<p >2. Aufgrund der erhöhten Brandgefahr darf die Shisha während der Benutzung nicht unbeaufsichtigt bleiben. </p>
+								<p >3. Eine Reinigung der Shisha ist nicht zu leisten.  </p>
 								<hr class="style-two">
-								<p style="color: white;">1. Überschrift: </p>
-								<p>Text</p>
-								<hr class="style-two">
-								<p style="color: white;">2. Überschrift:</p>
-								<p>Text</p>
-								<p>Text</p>
-								<p>Text</p>
-								<hr class="style-two">
-								<p style="color: white;">3. Überschrift</p>
-								<p>Text</p>
-								<p>Text</p>
+								<p><b>Allgemeine Geschäftsbedingungen (AGB) </b></p>
+								<p><b>1. Geltungsbereich</b></p>
+								<p >Die Vermietung erfolgt ausschließlich aufgrund dieser Mitvereinbarung. Nebenvereinbarungen sowie abweichende Vereinbarungen 
+									müssen schriftlich festgehalten werden. Die Geschäftsbedingungen gelten in ihrer jeweils aktuell gültigen Fassung. Der Vermieter 
+									(Shisha2you) ist jederzeit berechtigt, diese AGB mit einer angemessenen Ankündigungsfrist zu ändern oder zu ergänzen. Abweichungen 
+									von diesen allgemeinen Geschäftsbedingungen sind nur verbindlich, wenn sie für jedes einzelne Geschäft vereinbart und schriftlich 
+									niedergelegt werden.</p>
+								<p><b>2. Eigentumsschutz</b></p>
+								<p >Das Mietgerät bleibt mit all seinen Bestandteilen Eigentum des Vermieters. Sie sind und bleiben uneingeschränkt dessen Eigentum. Eine 
+									Verpfändung, Sicherungsübereignung, Veräußerung oder Weitergabe der Mietgegenstände ist ausdrücklich nicht gestattet. Eine Über-
+									lassung des gemieteten Geräts an Dritte ist unzulässig. Die Kosten von Interventionsmaßnahmen zum Schutze der Besitz- und Eigen-
+									tumsrechte vom Vermieter trägt der Mieter. Der Mieter trägt ebenfalls die Kosten, die dem Vermieter im Falle von Ausfall von Geräten 
+									aufgrund von Vollstreckungsmaßnahmen entstehen. </p>
+								<p><b>3. Angebot</b></p>
+								<p >Die Darstellung der Mietgeräte auf der Website stellt kein rechtlich bindendes Angebot, sondern eine Aufforderung zur Buchungsanfrage 
+									dar. Irrtümer vorbehalten. Auf jede Buchungsanfrage erhält der Mieter ein Angebot in dem alle Gebühren/Kosten die ersichtlich sind. 
+									Jede Bestellung auf Grundlage des Angebots durch einen Mieter stellt lediglich ein verbindliches Angebot auf Abschluss eines Mietver-
+									trages dar. Erst mit der Zusendung einer Reservierungsbestätigung (per WhatsApp) kommt der Kaufvertrag zustande. </p>
+								<p><b>4. Mietpreis</b></p>
+								<p >Der Mietpreis versteht sich als Lieferung ab Standort Hannover Mitte. Preisänderungen durch Irrtümer sind vorbehalten. Der Mietpreis 
+									kann durch ein individuelles Angebot durch den Vermieter an den Mieter abweichen (Rabatte, Vergünstigungen). </p>
+								<p><b>5. Lieferung/Abholung </b></p>
+								<p >Die Zusage eines Anliefer- bzw. Miettermins erfolgt unter Vorbehalt der Verfügbarkeit des Mietgegenstandes und der Liefermöglichkeit. 
+									Im Falle unvorhersehbarer außergewöhnlicher und unverschuldeter Umstände sowie bei einem Defekt auf dem Versandweg erhält der 
+									Mieter seinen Mietpreis zurück, sofern der Mietgegenstand nicht genutzt werden kann. Der Mieter verpflichtet sich für den Fall einer 
+									Nichtlieferung aus oben genannten Gründen vorzubeugen und sich einer Alternativlösung zu bemühen. 
+									Die Lieferung und Abholung des Mietgegenstandes erfolgt gemäß der Öffnungszeiten:  
+									<p >- Montag bis Donnerstag und Sonntag: Vermietung ab 15:00 Uhr – Abholung bis spätestens 23:00 Uhr</p> 
+									<p >- Freitag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Samstag 02:00 Uhr </p>
+									<p >- Samstag: Vermietung ab 15:00 Uhr – Abholung bis spätestens Sonntag 02:00 Uhr </p>
+									<p >Individuelle Absprachen sind möglich. </p></p>
+								<p><b>6. Mietzeit </b></p>
+								<p >Die Mietzeit beginnt und endet laut dem vereinbarten Datum und der vereinbarten Uhrzeit des Mietvertrags. </p>
+								<p><b>7. Zahlungsbedingungen </b></p>
+								<p >Die Zahlung der Mietgebühr hat bei Lieferung im Voraus zu erfolgen. </p>
+								<p><b>8. Schadensersatzansprüche/Haftungsausschlüsse </b></p>
+								<p >Schadensersatzansprüche des Mieters, gleichgültig aus welchem Rechtsgrund, insbesondere wegen Schlechterfüllung, Verletzung von 
+									Nebenpflichten und Verschulden bei Vertragsverhandlungen sowie aus unerlaubter Handlung werden ausgeschlossen, soweit der Scha-
+									den nicht vorsätzlich oder grob fahrlässig verursacht wurde.  
+									Für Schäden und Folgeschäden übernimmt der Vermieter keinerlei Haftung oder Verpflichtung zu Schadenersatz, gleich aus welchem 
+									Rechtsgrund. Der Haftungsausschluss betrifft insbesondere Nichtzustandekommen des Mietvertrages wegen Beschädigung oder Total-
+									ausfall des Mietgegenstandes auf dem Transportweg oder beim Mieter sowie wegen Nichtverfügbarkeit durch verspätete Rückgabe der 
+									Geräte von Vormietern. Ebenso übernimmt der Vermieter keine Haftung bei auftretenden Funktionsstörungen oder Totalausfall des 
+									Mietgegenstandes und jeden sich daraus ergebenden Folgeschaden, sei es nun unmittelbarer oder mittelbarer Art, einschließlich Ver-
+									dienstausfall oder entgangener Gewinn. Eine Haftung des Vermieters für Sach- und Personenschäden, die sich aus dem Mietgebrauch 
+									ergeben könnten, sind ausgeschlossen.  </p>
+								<p><b>9. Mängelrügen/Pflichten des Mieters </b></p>
+								<p >Der Mieter hat die Mietgegenstände unmittelbar nach Empfang auf Vollständigkeit, Funktionstüchtigkeit und einwandfreie Beschaffen-
+									heit zu überprüfen. Die Mietgegenstände gelten als in einwandfreiem Zustand übernommen, wenn eventuelle Mängel nicht umgehend 
+									bei Lieferung an den Vermieter gemeldet worden sind. Auf eigene Veranlassung durchgeführte Reparaturen oder Serviceleistungen sind 
+									nicht zulässig und benötigen die Zustimmung des Vermieters. 
+									Jeder auftretenden Mangel, Schäden, Verlust oder Untergang der Mietgegenstände sind dem Vermieter unverzüglich schriftlich anzu-
+									zeigen. Die Entwendung der Mietgegenstände aus dem Besitz des Mieters ist von dem Mieter unverzüglich gegenüber den staatlichen 
+									Ermittlungsbehörden anzuzeigen. Dem Mieter obliegt es, den Untergang oder die Entwendung der Mietgegenstände aus seinem Besitz 
+									nachzuweisen. 
+									Sollte ein Mietgegenstand zu dem Zeitpunkt der Anmietung deutliche Gebrauchsspuren oder Schäden aufweisen – welche die Funktio-
+									nalität jedoch nicht beeinträchtigen – so werden diese vom Vermieter dokumentiert und im Mietvertrag festgehalten oder vor der An-
+									mietung mitgeteilt. 
+									Der Mieter verpflichtet sich zum sorgfältigen Umgang und ausschließlich zur üblichen Nutzung der gemieteten Geräte. Die beiliegenden 
+									Anweisungen sind zu befolgen. Er haftet für aufkommende Schäden infolge von Fahrlässigkeit, grober Fahrlässigkeit oder Diebstahl. 
+									Mietobjekte sind inkl. Zubehör zum vereinbarten Termin in einwandfreiem Zustand zurückzugeben.  
+									Der Mieter haftet für abhanden gekommenes Zubehör und dem Mietgerät selbst, zum Preis der Neubeschaffung. Die Geräte gelten als 
+									in einwandfreiem Zustand übernommen, soweit evtl. Mängel nicht bei der Empfangnahme ausdrücklich gerügt werden.  
+									Wird die Shisha defekt zurückgegeben ist Schadensersatz in folgender Höhe zu leisten:  
+									<p >- Defekter/ fehlender Kopf: 5€ </p>
+									<p >- Defekter/fehlender Schlauch: 15€ </p>
+									<p >- Defekter Glasbehälter: 30€ </p>
+									<p >- Komplett defekte Shisha: 90€ </p>
+								<p><b>10. Haftung des Mieters </b></p>
+								<p >Der Mieter haftet für die von ihm schuldhaft verursachte Verschlechterung, Verlust oder Untergang der Mietgegenstände während der 
+									vertraglich vereinbarten Besitzzeit oder bei einer eigenmächtigen Verlängerung der Besitzzeit durch den Mieter. Der Mieter haftet für 
+									abhanden gekommenes Zubehör und dem Mietgerät selbst, zum Preis der Neubeschaffung. Die Geräte gelten als in einwandfreiem 
+									Zustand übernommen, soweit evtl. Mängel nicht bei der Empfangnahme ausdrücklich gerügt werden. 
+									11. Gefahrenübergang </p>
+								<p><b>11. Gefahrenübergang </b></p>
+								<p>Die Gefahr geht auf den Mieter über, sobald der Mietgegenstand dem Mieter übergeben wurde. Bei der Rückgabe des Mietgegenstands 
+									geht die Gefahr mit der Übergabe des Mietgegenstands an den Lieferanten vom Mieter an den Vermieter über. </p>
+								<p><b>12. Rückgabe defekter Mietgeräte/Haftung des Mieters </b></p>
+								<p >Gibt der Mieter den Mietgegenstand defekt zurück, so hat er dafür zu haften (s. Punkt 9 und 10). Der Vermieter hat das Recht, den 
+									Mietgegenstand fachgerecht reparieren zu lassen bzw. im Falle der Unmöglichkeit oder Unwirtschaftlichkeit einer Reparatur Ersatzge-
+									räte zu kaufen. Die Kosten werden dem Mieter in Rechnung gestellt. Eine Reinigung der Shisha ist nicht zu leisten.  </p>
+								<p><b>13. Lieferprobleme </b></p>
+								<p >Kann ein Gerät nicht geliefert werden, erfolgt keine zusätzliche/weitere Schadenübernahme/Zahlung durch den Vermieter (s. Punkt 7). </p>
+								<p><b>14. Mindestalter </b></p>
+								<p >Der Mieter muss voll geschäftsfähig sein. Bei der Warenübergabe des Mietgeräts muss ein gültiger Personalausweis vorgelegt werden. 
+									(Es wird eine Kopie oder ein Foto des Ausweises angefertigt). </p>
+								<p><b>15. Jugendschutz</b></p>
+								<p >Generell verbietet das Jugendschutzgesetz Kindern und Jugendlichen den Erwerb und Konsum von Tabakwaren. Die Abgabe von Ta-
+									bakwaren an unter 18-Jährige wird untersagt. Der Vermieter übernimmt keinerlei Haftung für den Gebrauch bei Minderjährigen unter 
+									18 Jahren, sollte der Mieter den Mietgegenstand Minderjährigen zur Verfügung stellen. </p>
+								<p><b>16. Widerrufsrecht </b></p>
+								<p >Sie können Ihre Vertragserklärung widerrufen. Es ist ein Schadensersatz in voller Höhe der vereinbarten Bestellung zu leisten.  </p>
+								<p><b>17. Sonstiges </b></p>
+								<p >Der Mieter erklärt sein Einverständnis damit, dass der Vermieter seine im Rahmen der Geschäftsbeziehungen zugehenden, personenbe-
+									zogenen Daten speichert und nicht an Dritte weitergibt. Die Daten werden im Rahmen der gesetzlichen Regelungen gespeichert. Zur 
+									Vertragsabwicklung und zur technischen Unterstützung der durch den Mieter in Anspruch genommenen Leistungen oder Funktionalitä-
+									ten können die Daten des Mieters im Rahmen der Auftragsdatenverarbeitung an beauftragte Unternehmen übermittelt werden.  </p>
 					</div>
 					<div class="modal-footer"></div>
 				</div>
